--- a/FoodPiper/WaitTimeView.xib
+++ b/FoodPiper/WaitTimeView.xib
@@ -4,7 +4,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RatingViewController" customModule="FoodPiper" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RatingViewController" customModule="FoodPiper" customModuleProvider="target">
+            <connections>
+                <outlet property="view" destination="iN0-l3-epB" id="IKG-Ii-V7a"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RatingView" customModule="FoodPiper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -74,28 +78,6 @@
                         </mask>
                     </variation>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" tag="99" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wait Time?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c0y-TH-Fs1">
-                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="93" id="Etr-Fd-fJE"/>
-                        <constraint firstAttribute="height" constant="28" id="W3h-gJ-2om"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="Etr-Fd-fJE"/>
-                            <exclude reference="W3h-gJ-2om"/>
-                        </mask>
-                    </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
-                        <mask key="constraints">
-                            <include reference="Etr-Fd-fJE"/>
-                            <include reference="W3h-gJ-2om"/>
-                        </mask>
-                    </variation>
-                </label>
                 <button opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xck-sr-DB8">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <color key="backgroundColor" red="0.25882352939999997" green="0.73725490199999999" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -106,16 +88,19 @@
                     <state key="normal" title="Next"/>
                     <variation key="default">
                         <mask key="constraints">
-                            <exclude reference="W8V-ea-tFg"/>
                             <exclude reference="Dx8-eK-UVV"/>
+                            <exclude reference="W8V-ea-tFg"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
                         <mask key="constraints">
-                            <include reference="W8V-ea-tFg"/>
                             <include reference="Dx8-eK-UVV"/>
+                            <include reference="W8V-ea-tFg"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <action selector="gotoNextRatingCriteria" destination="-1" eventType="touchUpInside" id="KRj-wC-iB4"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fast" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNf-Ua-gMk">
                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -135,6 +120,30 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" tag="99" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wait Time?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c0y-TH-Fs1">
+                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="93" id="Etr-Fd-fJE">
+                            <variation key="heightClass=regular-widthClass=compact" constant="142"/>
+                        </constraint>
+                        <constraint firstAttribute="height" constant="28" id="W3h-gJ-2om"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Etr-Fd-fJE"/>
+                            <exclude reference="W3h-gJ-2om"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="Etr-Fd-fJE"/>
+                            <include reference="W3h-gJ-2om"/>
+                        </mask>
+                    </variation>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -148,14 +157,18 @@
                 <constraint firstItem="83c-vV-lZ9" firstAttribute="centerY" secondItem="abF-nz-xGO" secondAttribute="centerY" id="KCx-Ye-TVT"/>
                 <constraint firstItem="7yL-Fh-RYx" firstAttribute="centerX" secondItem="abF-nz-xGO" secondAttribute="centerX" id="LSW-5P-6GG"/>
                 <constraint firstItem="7yL-Fh-RYx" firstAttribute="top" secondItem="abF-nz-xGO" secondAttribute="bottom" constant="8" id="RMt-zn-X5r"/>
-                <constraint firstItem="abF-nz-xGO" firstAttribute="top" secondItem="c0y-TH-Fs1" secondAttribute="bottom" constant="66" id="VL1-X6-9pi"/>
+                <constraint firstItem="abF-nz-xGO" firstAttribute="top" secondItem="c0y-TH-Fs1" secondAttribute="bottom" constant="66" id="VL1-X6-9pi">
+                    <variation key="heightClass=regular-widthClass=compact" constant="68"/>
+                </constraint>
                 <constraint firstItem="pNf-Ua-gMk" firstAttribute="centerX" secondItem="QSE-7p-QTf" secondAttribute="centerX" id="VRX-E8-dPZ"/>
                 <constraint firstItem="u0H-Ru-TaP" firstAttribute="centerX" secondItem="83c-vV-lZ9" secondAttribute="centerX" id="YdV-dB-Z8E"/>
                 <constraint firstItem="pNf-Ua-gMk" firstAttribute="top" secondItem="QSE-7p-QTf" secondAttribute="bottom" constant="8" id="Yk8-Nn-zyw"/>
                 <constraint firstItem="u0H-Ru-TaP" firstAttribute="top" secondItem="83c-vV-lZ9" secondAttribute="bottom" constant="8" id="na5-AD-1Cn"/>
                 <constraint firstItem="Xck-sr-DB8" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="qUB-uz-g1I"/>
                 <constraint firstItem="7yL-Fh-RYx" firstAttribute="width" secondItem="abF-nz-xGO" secondAttribute="width" id="rhM-Q3-LVp"/>
-                <constraint firstItem="c0y-TH-Fs1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="82" id="wGR-Pp-vrg"/>
+                <constraint firstItem="c0y-TH-Fs1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="82" id="wGR-Pp-vrg">
+                    <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                </constraint>
                 <constraint firstAttribute="bottom" secondItem="Xck-sr-DB8" secondAttribute="bottom" constant="13" id="xtd-Kb-YUd"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -164,32 +177,32 @@
                     <exclude reference="QSE-7p-QTf"/>
                     <exclude reference="abF-nz-xGO"/>
                     <exclude reference="83c-vV-lZ9"/>
-                    <exclude reference="c0y-TH-Fs1"/>
                     <exclude reference="Xck-sr-DB8"/>
                     <exclude reference="pNf-Ua-gMk"/>
                     <exclude reference="7yL-Fh-RYx"/>
                     <exclude reference="u0H-Ru-TaP"/>
+                    <exclude reference="c0y-TH-Fs1"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="0zp-86-sxo"/>
-                    <exclude reference="wGR-Pp-vrg"/>
+                    <exclude reference="1hK-2T-LH9"/>
+                    <exclude reference="KCx-Ye-TVT"/>
                     <exclude reference="Gmx-tD-813"/>
+                    <exclude reference="qUB-uz-g1I"/>
+                    <exclude reference="xtd-Kb-YUd"/>
                     <exclude reference="0fp-V5-UFM"/>
                     <exclude reference="JCJ-no-xIQ"/>
                     <exclude reference="VL1-X6-9pi"/>
-                    <exclude reference="1br-AV-YE2"/>
-                    <exclude reference="VRX-E8-dPZ"/>
-                    <exclude reference="Yk8-Nn-zyw"/>
                     <exclude reference="LSW-5P-6GG"/>
                     <exclude reference="RMt-zn-X5r"/>
                     <exclude reference="rhM-Q3-LVp"/>
-                    <exclude reference="1hK-2T-LH9"/>
-                    <exclude reference="KCx-Ye-TVT"/>
+                    <exclude reference="0zp-86-sxo"/>
+                    <exclude reference="wGR-Pp-vrg"/>
+                    <exclude reference="1br-AV-YE2"/>
+                    <exclude reference="VRX-E8-dPZ"/>
+                    <exclude reference="Yk8-Nn-zyw"/>
                     <exclude reference="GEE-Uf-ezj"/>
                     <exclude reference="YdV-dB-Z8E"/>
                     <exclude reference="na5-AD-1Cn"/>
-                    <exclude reference="qUB-uz-g1I"/>
-                    <exclude reference="xtd-Kb-YUd"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
@@ -197,34 +210,37 @@
                     <include reference="QSE-7p-QTf"/>
                     <include reference="abF-nz-xGO"/>
                     <include reference="83c-vV-lZ9"/>
-                    <include reference="c0y-TH-Fs1"/>
                     <include reference="Xck-sr-DB8"/>
                     <include reference="pNf-Ua-gMk"/>
                     <include reference="7yL-Fh-RYx"/>
                     <include reference="u0H-Ru-TaP"/>
+                    <include reference="c0y-TH-Fs1"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="0zp-86-sxo"/>
-                    <include reference="wGR-Pp-vrg"/>
+                    <include reference="1hK-2T-LH9"/>
+                    <include reference="KCx-Ye-TVT"/>
                     <include reference="Gmx-tD-813"/>
+                    <include reference="qUB-uz-g1I"/>
+                    <include reference="xtd-Kb-YUd"/>
                     <include reference="0fp-V5-UFM"/>
                     <include reference="JCJ-no-xIQ"/>
                     <include reference="VL1-X6-9pi"/>
-                    <include reference="1br-AV-YE2"/>
-                    <include reference="VRX-E8-dPZ"/>
-                    <include reference="Yk8-Nn-zyw"/>
                     <include reference="LSW-5P-6GG"/>
                     <include reference="RMt-zn-X5r"/>
                     <include reference="rhM-Q3-LVp"/>
-                    <include reference="1hK-2T-LH9"/>
-                    <include reference="KCx-Ye-TVT"/>
+                    <include reference="0zp-86-sxo"/>
+                    <include reference="wGR-Pp-vrg"/>
+                    <include reference="1br-AV-YE2"/>
+                    <include reference="VRX-E8-dPZ"/>
+                    <include reference="Yk8-Nn-zyw"/>
                     <include reference="GEE-Uf-ezj"/>
                     <include reference="YdV-dB-Z8E"/>
                     <include reference="na5-AD-1Cn"/>
-                    <include reference="qUB-uz-g1I"/>
-                    <include reference="xtd-Kb-YUd"/>
                 </mask>
             </variation>
+            <connections>
+                <outlet property="btnNext" destination="Xck-sr-DB8" id="nwy-Ea-5zh"/>
+            </connections>
         </view>
     </objects>
 </document>
